partly reimplemented block placer (most of the code was there)

--- a/src/main/resources/assets/steamcraft/lang/en_US.lang
+++ b/src/main/resources/assets/steamcraft/lang/en_US.lang
@@ -515,7 +515,7 @@ tile.steamcraft:blockCopper.name=Block of Copper
 tile.steamcraft:blockZinc.name=Block of Zinc
 
 tile.steamcraft:saw.name=Buzzsaw
-tile.steamcraft:blockPlacer.name=Plonker
+tile.steamcraft:blockPlacer.name=Block Placer
 tile.steamcraft:charger.name=Steam Filler
 tile.steamcraft:chargingPad.name=Filling Pad
 tile.steamcraft:crucible.name=Crucible
