:bug: :art: Fix things not getting registered in the preinit stage. Non-complicated model blocks now render properly (Carving Table, Boiler, Engineering Table, ores, storage blocks)

--- a/src/main/resources/assets/steamcraft/lang/en_US.lang
+++ b/src/main/resources/assets/steamcraft/lang/en_US.lang
@@ -1,4 +1,4 @@
-psteamcraft.book.index=Index
+steamcraft.book.index=Index
 steamcraft.book.info=A brief guide to steam power.
 steamcraft.book.by=by
 steamcraft.book.shapeless=Shapeless
@@ -646,38 +646,43 @@ item.toolHead.headPickaxeGilded.name=Gilded Iron Pickaxe Head
 item.toolHead.headShovelGilded.name=Gilded Iron Shovel Head
 item.toolHead.headHoeGilded.name=Gilded Iron Hoe Head
 
-tile.steamcraft:blockBrass.name=Block of Brass
-tile.steamcraft:blockCopper.name=Block of Copper
-tile.steamcraft:blockZinc.name=Block of Zinc
+tile.steamcraft:metal_storage_block.0.name=Block of Copper
+tile.steamcraft:metal_storage_block.1.name=Block of Zinc
+tile.steamcraft:metal_storage_block.2.name=Block of Brass
+tile.steamcraft:metal_storage_block.3.name=Block of Gilded Iron
 
 tile.steamcraft:saw.name=Buzzsaw
 tile.steamcraft:blockPlacer.name=Block Placer
 tile.steamcraft:charger.name=Steam Filler
-tile.steamcraft:chargingPad.name=Filling Pad
+tile.steamcraft:charging_pad.name=Filling Pad
 tile.steamcraft:crucible.name=Crucible
-tile.steamcraft:hellCrucible.name=Nether Crucible
+tile.steamcraft:hell_crucible.name=Nether Crucible
 tile.steamcraft:mold.name=Mold
 tile.steamcraft:pipe.name=Pipe
-tile.steamcraft:valvePipe.name=Valve Pipe
+tile.steamcraft:valve_pipe.name=Valve Pipe
 tile.steamcraft:boiler.name=Boiler
+tile.steamcraft:boiler_on.name=Boiler
 tile.steamcraft:heater.name=Steam Heater
 tile.steamcraft:ore.0.name=Copper Ore
+tile.steamcraft:ore.2.name=Copper Ore
+tile.steamcraft:ore.4.name=Copper Ore
 tile.steamcraft:ore.1.name=Zinc Ore
-tile.steamcraft:ore.2.name=Poor Zinc Ore
-tile.steamcraft:carving.name=Carving Table
+tile.steamcraft:ore.3.name=Zinc Ore
+tile.steamcraft:ore.5.name=Zinc Ore
+tile.steamcraft:carving_table.name=Carving Table
 tile.steamcraft:engineering.name=Engineering Table
-tile.steamcraft:tank.0.name=Steam Tank
-tile.steamcraft:tank.1.name=Creative Steam Tank
+tile.steamcraft:steam_tank.0.name=Steam Tank
+tile.steamcraft:steam_tank.1.name=Creative Steam Tank
 tile.steamcraft:meter.name=Steam Gauge
 tile.steamcraft:hammer.name=Steam Hammer
-tile.steamcraft:itemMortar.name=Item Mortar
+tile.steamcraft:item_mortar.name=Item Mortar
 tile.steamcraft:pump.name=Archimedes Screw
 tile.steamcraft:smasher.name=Rock Smasher
 tile.steamcraft:thumper.name=Thumper
-tile.steamcraft:flashBoiler.name=Flash Boiler Component
-tile.steamcraft:ruptureDisc.0.name=Rupture Disc
-tile.steamcraft:ruptureDisc.1.name=Burst Rupture Disc
+tile.steamcraft:flash_foiler.name=Flash Boiler Component
+tile.steamcraft:rupture_disc.0.name=Rupture Disc
+tile.steamcraft:rupture_disc.1.name=Burst Rupture Disc
 tile.steamcraft:fan.name=Fan
 tile.steamcraft:vacuum.name=Vacuum
 tile.steamcraft:horn.name=Steam Whistle
-tile.steamcraft:fluidSteamConverter.name=Pressure Converter
+tile.steamcraft:fluid_steam_converter.name=Pressure Converter
