:art: Metal item models

--- a/src/main/resources/assets/steamcraft/lang/en_US.lang
+++ b/src/main/resources/assets/steamcraft/lang/en_US.lang
@@ -466,28 +466,29 @@ item.steamcraft:ingot.3.name=Gilded Iron Ingot
 
 item.steamcraft:nugget.0.name=Copper Nugget
 item.steamcraft:nugget.1.name=Zinc Nugget
-item.steamcraft:nugget.2.name=Iron Nugget
-item.steamcraft:nugget.3.name=Brass Nugget
+item.steamcraft:nugget.2.name=Brass Nugget
+item.steamcraft:nugget.3.name=Gilded Iron Nugget
+item.steamcraft:nugget.4.name=Iron Nugget
 
-item.steamcraft:smashedOre.Iron.name=Smashed Iron Ore
-item.steamcraft:smashedOre.Gold.name=Smashed Gold Ore
-item.steamcraft:smashedOre.Copper.name=Smashed Copper Ore
-item.steamcraft:smashedOre.Zinc.name=Smashed Zinc Ore
-item.steamcraft:smashedOre.Tin.name=Smashed Tin Ore
-item.steamcraft:smashedOre.Nickel.name=Smashed Nickel Ore
-item.steamcraft:smashedOre.Silver.name=Smashed Silver Ore
-item.steamcraft:smashedOre.Lead.name=Smashed Lead Ore
-item.steamcraft:smashedOre.Aluminum.name=Smashed Aluminum Ore
-item.steamcraft:smashedOre.Osmium.name=Smashed Osmium Ore
-item.steamcraft:smashedOre.Cobalt.name=Smashed Cobalt Ore
-item.steamcraft:smashedOre.Ardite.name=Smashed Ardite Ore
-item.steamcraft:smashedOre.Cinnabar.name=Smashed Cinnabar Ore
+item.steamcraft:smashed_ore.Iron.name=Smashed Iron Ore
+item.steamcraft:smashed_ore.Gold.name=Smashed Gold Ore
+item.steamcraft:smashed_ore.Copper.name=Smashed Copper Ore
+item.steamcraft:smashed_ore.Zinc.name=Smashed Zinc Ore
+item.steamcraft:smashed_ore.Tin.name=Smashed Tin Ore
+item.steamcraft:smashed_ore.Nickel.name=Smashed Nickel Ore
+item.steamcraft:smashed_ore.Silver.name=Smashed Silver Ore
+item.steamcraft:smashed_ore.Lead.name=Smashed Lead Ore
+item.steamcraft:smashed_ore.Aluminum.name=Smashed Aluminum Ore
+item.steamcraft:smashed_ore.Osmium.name=Smashed Osmium Ore
+item.steamcraft:smashed_ore.Cobalt.name=Smashed Cobalt Ore
+item.steamcraft:smashed_ore.Ardite.name=Smashed Ardite Ore
+item.steamcraft:smashed_ore.Cinnabar.name=Smashed Cinnabar Ore
 
-item.steamcraft:smashedOre.PoorIron.name=Smashed Poor Iron Ore
-item.steamcraft:smashedOre.PoorGold.name=Smashed Poor Gold Ore
-item.steamcraft:smashedOre.PoorCopper.name=Smashed Poor Copper Ore
-item.steamcraft:smashedOre.PoorZinc.name=Smashed Poor Zinc Ore
-item.steamcraft:smashedOre.PoorTin.name=Smashed Poor Tin Ore
+item.steamcraft:smashed_ore.PoorIron.name=Smashed Poor Iron Ore
+item.steamcraft:smashed_ore.PoorGold.name=Smashed Poor Gold Ore
+item.steamcraft:smashed_ore.PoorCopper.name=Smashed Poor Copper Ore
+item.steamcraft:smashed_ore.PoorZinc.name=Smashed Poor Zinc Ore
+item.steamcraft:smashed_ore.PoorTin.name=Smashed Poor Tin Ore
 
 item.steamcraft:crafting.0.name=Brass Piston
 item.steamcraft:crafting.1.name=Wooden Stock
@@ -498,17 +499,10 @@ item.steamcraft:crafting.5.name=Brass Turbine
 
 item.steamcraft:plate.0.name=Copper Plate
 item.steamcraft:plate.1.name=Zinc Plate
-item.steamcraft:plate.2.name=Iron Plate
-item.steamcraft:plate.3.name=Gold Plate
-item.steamcraft:plate.4.name=Brass Plate
-item.steamcraft:plate.5.name=Thaumium Plate
-item.steamcraft:plate.6.name=Terrasteel Plate
-item.steamcraft:plate.7.name=Elementium Plate
-item.steamcraft:plate.8.name=Fiery Plate
-item.steamcraft:plate.9.name=Lead Plate
-item.steamcraft:plate.10.name=Vibrant Plate
-item.steamcraft:plate.11.name=Enderium Plate
-item.steamcraft:plate.12.name=Gilded Iron Plate
+item.steamcraft:plate.2.name=Brass Plate
+item.steamcraft:plate.3.name=Gilded Iron Plate
+item.steamcraft:plate.4.name=Iron Plate
+item.steamcraft:plate.5.name=Gold Plate
 
 item.steamcraft:exosuitPlate.0.name=Copper Exosuit Plate
 item.steamcraft:exosuitPlate.1.name=Zinc Exosuit Plate
