:art: Tool upgrade item models

--- a/src/main/resources/assets/steamcraft/lang/en_US.lang
+++ b/src/main/resources/assets/steamcraft/lang/en_US.lang
@@ -554,26 +554,26 @@ item.steamcraft:steam_drill.name=Steam Drill
 item.steamcraft:steam_axe.name=Steam Saw
 item.steamcraft:steam_shovel.name=Steam Shovel
 
-item.steamcraft:theVoid.name=The Void
+item.steamcraft:the_void.name=The Void
 steamcraft.void.desc=The Void: Set to (%d, %d, %d)
 
-item.steamcraft:autosmelting.name=Exothermic Projector
+item.steamcraft:exothermic_projector.name=Exothermic Projector
 item.steamcraft:overclocker.name=Overclocker
-item.steamcraft:bigDrill.name=Big Drill
-item.steamcraft:battleDrill.name=Battle Drill
-item.steamcraft:stoneGrinder.name=Stone Grinder
-item.steamcraft:preciseCuttingHead.name=Precise Cutting Head
-item.steamcraft:thermalDrill.name=Thermal Drill
-item.steamcraft:drillFortune.name=Multiplicative Resonator
-item.steamcraft:chargePlacer.name=Calamity Injector
-item.steamcraft:drillHead.name=Steam Drill Head
-item.steamcraft:internalProcessor.name=Internal Processing Unit
-item.steamcraft:leafBlower.name=Leaf Blower
-item.steamcraft:feller.name=Timber Chain
+item.steamcraft:big_drill.name=Big Drill
+item.steamcraft:battle_drill.name=Battle Drill
+item.steamcraft:stone_grinder.name=Stone Grinder
+item.steamcraft:precise_cutting_head.name=Precise Cutting Head
+item.steamcraft:thermal_drill.name=Thermal Drill
+item.steamcraft:multiplicative_resonator.name=Multiplicative Resonator
+item.steamcraft:charge_placer.name=Calamity Injector
+item.steamcraft:drill_head.name=Steam Drill Head
+item.steamcraft:internal_processing_unit.name=Internal Processing Unit
+item.steamcraft:leaf_blower.name=Leaf Blower
+item.steamcraft:timber_chain.name=Timber Chain
 item.steamcraft:chainsaw.name=Chainsaw
-item.steamcraft:forestFire.name=Forest Fire
+item.steamcraft:forest_fire.name=Forest Fire
 item.steamcraft:cultivator.name=Cultivator
-item.steamcraft:rotaryBlades.name=Rotary Blades
+item.steamcraft:rotary_blades.name=Rotary Blades
 item.steamcraft:sifter.name=Sifter
 item.steamcraft:backhoe.name=Backhoe
 
