:art: Steam Gauage rendering. ModelPointer is not completely removed yet because the Exosuit still uses it. Eventually that will be replaced by JSON

--- a/src/main/resources/assets/steamcraft/lang/en_US.lang
+++ b/src/main/resources/assets/steamcraft/lang/en_US.lang
@@ -668,7 +668,7 @@ tile.steamcraft:carving_table.name=Carving Table
 tile.steamcraft:engineering.name=Engineering Table
 tile.steamcraft:steam_tank.0.name=Steam Tank
 tile.steamcraft:steam_tank.1.name=Creative Steam Tank
-tile.steamcraft:meter.name=Steam Gauge
+tile.steamcraft:steam_gauge.name=Steam Gauge
 tile.steamcraft:hammer.name=Steam Hammer
 tile.steamcraft:item_mortar.name=Item Mortar
 tile.steamcraft:pump.name=Archimedes Screw
