:art: :fu: Thumper renderer. Clean up some RenderUtility stuff. Like the Vacuum, until Forge gets its submodel rotation shit together, the inventory model looks totally weird for the Thumper.

--- a/src/main/resources/assets/steamcraft/lang/en_US.lang
+++ b/src/main/resources/assets/steamcraft/lang/en_US.lang
@@ -674,6 +674,7 @@ tile.steamcraft:item_mortar.name=Item Mortar
 tile.steamcraft:pump.name=Archimedes Screw
 tile.steamcraft:smasher.name=Rock Smasher
 tile.steamcraft:thumper.name=Thumper
+tile.steamcraft:thumper_dummy.name=Thumper
 tile.steamcraft:flash_foiler.name=Flash Boiler Component
 tile.steamcraft:rupture_disc.0.name=Rupture Disc
 tile.steamcraft:rupture_disc.1.name=Burst Rupture Disc
