:gem: :wrench: :fu: Steam Heater improvements * General cleanup * New SteamingRegistry for all steaming-recipe related registry. Just some organizational wumbo jumbo. * New Steamed Carrot, Potato, and Beetroot. * Improve the API by working with input/output, rather than hard replacements and stuff. This also allows for entirely new recipes that do not replace old ones.

--- a/src/main/resources/assets/steamcraft/lang/en_US.lang
+++ b/src/main/resources/assets/steamcraft/lang/en_US.lang
@@ -630,6 +630,9 @@ item.steamcraft:steamed_porkchop.name=Steamed Porkchop
 item.steamcraft:steamed_salmon.name=Steamed Salmon
 item.steamcraft:steamed_mutton.name=Steamed Mutton
 item.steamcraft:steamed_rabbit.name=Steamed Rabbit
+item.steamcraft:steamed_carrot.name=Steamed Carrot
+item.steamcraft:steamed_potato.name=Steamed Potato
+item.steamcraft:steamed_beetroot.name=Steamed Beetroot
 item.steamcraft:steamedImphide.name=Steamed Imphide
 
 item.toolHead.headAxeBrass.name=Brass Axe Head
