--- a/src/main/resources/assets/esteemedinnovation/lang/en_US.lang
+++ b/src/main/resources/assets/esteemedinnovation/lang/en_US.lang
@@ -689,3 +689,7 @@ tile.esteemedinnovation:vacuum.name=Vacuum
 tile.esteemedinnovation:steam_whistle.name=Steam Whistle
 tile.esteemedinnovation:fluid_steam_converter.name=Pressure Converter
 tile.esteemedinnovation:funnel.name=Funnel
+
+esteemedinnovation.research.sneakforlist=Sneak to view your keywords
+item.esteemedinnovation:soil_sampling_kit.name=Soil Sampling Kit
+item.esteemedinnovation:research_log_biome.name=Biome Log
