:wrench: Redesign of overworld ore generation. Copper and Zinc now generate only once per every 16 or so chunks. Copper and Zinc cannot generate in the same chunk. Instead of generating standard ore veins, they generate ore deposit generators, which are renewable sources of copper/zinc. Though, without the debug mode, they appear exactly the same as their ore variants. 30% of ore deposits are worked out, providing a small room, and a possibility of a chest with custom loot, a workbench, and a furnace. Worked out ore veins have much less ore to start with. Ore deposits regenerate a single ore block each MC day. The Soil Sampling Kit will show the exclamation point particles when it finds an ore deposit generator block.

--- a/src/main/resources/assets/esteemedinnovation/lang/en_US.lang
+++ b/src/main/resources/assets/esteemedinnovation/lang/en_US.lang
@@ -670,6 +670,10 @@ tile.esteemedinnovation:ore.4.name=Copper Ore
 tile.esteemedinnovation:ore.1.name=Zinc Ore
 tile.esteemedinnovation:ore.3.name=Zinc Ore
 tile.esteemedinnovation:ore.5.name=Zinc Ore
+tile.esteemedinnovation:ore_deposit_generator.0.name=Copper Ore
+tile.esteemedinnovation:ore_deposit_generator.2.name=Copper Ore
+tile.esteemedinnovation:ore_deposit_generator.1.name=Zinc Ore
+tile.esteemedinnovation:ore_deposit_generator.3.name=Zinc Ore
 tile.esteemedinnovation:carving_table.name=Carving Table
 tile.esteemedinnovation:engineering.name=Engineering Table
 tile.esteemedinnovation:steam_tank.0.name=Steam Tank
