:gem: :wrench: Pipe work * New PipeBlocks init category for the new sets of pipes being added with the pipe casting stuff. * Rename the Pipe to the Brass Pipe. * Move pipe stuff to specific pipe packages. * New Copper Pipe. This pipe transports fluids that are between 200 and 400 degrees. Fluid pipes have 3 modes: transfer, input, and output. Transfer can only move fluids into other EI pipes. Input can only move fluids from EI pipes into containers. Output can only move fluids from non-pipe containers into pipes.
TODO: Only allow the pipes to move fluids upwards if there are impellers pumping them.

--- a/src/main/resources/assets/esteemedinnovation/lang/en_US.lang
+++ b/src/main/resources/assets/esteemedinnovation/lang/en_US.lang
@@ -659,7 +659,6 @@ tile.esteemedinnovation:charging_pad.name=Filling Pad
 tile.esteemedinnovation:crucible.name=Crucible
 tile.esteemedinnovation:hell_crucible.name=Nether Crucible
 tile.esteemedinnovation:mold.name=Mold
-tile.esteemedinnovation:pipe.name=Pipe
 tile.esteemedinnovation:valve_pipe.name=Valve Pipe
 tile.esteemedinnovation:boiler.name=Boiler
 tile.esteemedinnovation:boiler_on.name=Boiler
@@ -697,3 +696,6 @@ tile.esteemedinnovation:funnel.name=Funnel
 esteemedinnovation.research.sneakforlist=Sneak to view your keywords
 item.esteemedinnovation:soil_sampling_kit.name=Soil Sampling Kit
 item.esteemedinnovation:research_log_biome.name=Biome Log
+
+tile.esteemedinnovation:brass_pipe.name=Brass Pipe
+tile.esteemedinnovation:copper_pipe.name=Copper Pipe
