:gem: Copper and Brass Pipes are now made through metalcasting

--- a/src/main/resources/assets/esteemedinnovation/lang/en_US.lang
+++ b/src/main/resources/assets/esteemedinnovation/lang/en_US.lang
@@ -697,5 +697,6 @@ esteemedinnovation.research.sneakforlist=Sneak to view your keywords
 item.esteemedinnovation:soil_sampling_kit.name=Soil Sampling Kit
 item.esteemedinnovation:research_log_biome.name=Biome Log
 
+item.esteemedinnovation:pipe_mold.name=Pipe Mold
 tile.esteemedinnovation:brass_pipe.name=Brass Pipe
 tile.esteemedinnovation:copper_pipe.name=Copper Pipe
