:fu: Clean up duplicate displayWrench code in fan and vacuum. Improve the localization for their ranges by utilizing format args

--- a/src/main/resources/assets/esteemedinnovation/lang/en_US.lang
+++ b/src/main/resources/assets/esteemedinnovation/lang/en_US.lang
@@ -52,8 +52,7 @@ esteemedinnovation.astrolabe.dimension.nether=the Nether
 esteemedinnovation.astrolabe.dimension.end=the End
 esteemedinnovation.astrolabe.in=in
 
-esteemedinnovation.fan.range=Range:
-esteemedinnovation.fan.blocks=blocks
+esteemedinnovation.fan.range=Range: %d blocks
 esteemedinnovation.smasher.true=Mode: Block Breaker
 esteemedinnovation.smasher.false=Mode: Smasher
 
