:art: Firearm models. Durability bars do not work. I will work on those once I get the firearms to actually work.

--- a/src/main/resources/assets/esteemedinnovation/lang/en_US.lang
+++ b/src/main/resources/assets/esteemedinnovation/lang/en_US.lang
@@ -423,13 +423,13 @@ item.esteemedinnovation:rocket_concussive.name=Concussive Rocket
 item.esteemedinnovation:rocket_miner.name=Mining Charge
 
 item.esteemedinnovation:musket.name=Flintlock Musket
-item.esteemedinnovation:rocketLauncher.name=Rocket Launcher
+item.esteemedinnovation:rocket_launcher.name=Rocket Launcher
 item.esteemedinnovation:rocketLauncherFast.name=Streamlined Rocket Launcher
 item.esteemedinnovation:rocketLauncherAmmo.name=High Capacity Rocket Launcher
 item.esteemedinnovation:rocketLauncherAirStrike.name=Air Strike
-item.esteemedinnovation:enhancementFastRockets.name=Streamlined Barrel
-item.esteemedinnovation:enhancementAmmo.name=Extended Magazine
-item.esteemedinnovation:enhancementAirStrike.name=Air Strike Conversion Kit
+item.esteemedinnovation:enhancement_fast_rockets.name=Streamlined Barrel
+item.esteemedinnovation:enhancement_ammo.name=Extended Magazine
+item.esteemedinnovation:enhancement_air_strike.name=Air Strike Conversion Kit
 
 item.esteemedinnovation:pistol.name=Flintlock Pistol
 item.esteemedinnovation:revolver.name=Flintlock Revolver
@@ -437,12 +437,12 @@ item.esteemedinnovation:blunderbuss.name=Flintlock Blunderbuss
 item.esteemedinnovation:blunderbussAblaze.name=Blazing Flintlock Blunderbuss
 item.esteemedinnovation:blunderbussSpeedloader.name=Bolt Action Flintlock Blunderbuss
 item.esteemedinnovation:spyglass.name=Spyglass
-item.esteemedinnovation:enhancementAblaze.name=Blaze Barrel
-item.esteemedinnovation:enhancementSpeedloader.name=Bolt Action
-item.esteemedinnovation:enhancementRevolver.name=Revolver Chamber
-item.esteemedinnovation:enhancementSilencer.name=Makeshift Suppressor
-item.esteemedinnovation:enhancementRecoil.name=Recoil Pad
-item.esteemedinnovation:enhancementSpeedy.name=Breech
+item.esteemedinnovation:enhancement_blaze.name=Blaze Barrel
+item.esteemedinnovation:enhancement_speedloader.name=Bolt Action
+item.esteemedinnovation:enhancement_revolver.name=Revolver Chamber
+item.esteemedinnovation:enhancement_silencer.name=Makeshift Suppressor
+item.esteemedinnovation:enhancement_recoil.name=Recoil Pad
+item.esteemedinnovation:enhancement_speedy.name=Breech
 item.esteemedinnovation:musketMarksman.name=Marksman's Flintlock Musket
 item.esteemedinnovation:musketSpeedloader.name=Bolt Action Flintlock Musket
 item.esteemedinnovation:musketAblaze.name=Blazing Flintlock Musket
