:art: Steam Tool models! Standardize tool upgrade icons out of necessity. New registry for tool upgrades. Currently only used for the rendering stuff. There is no longer a second durability bar for the winding progress. If this is something that is missed I can look into it further (it is not as important to the second durability bar for the firearms, in my opinion, but with proper design I could make it usable for both). Lots of TODOs \o/

--- a/src/main/resources/assets/esteemedinnovation/lang/en_US.lang
+++ b/src/main/resources/assets/esteemedinnovation/lang/en_US.lang
@@ -553,7 +553,7 @@ item.esteemedinnovation:brass_hoe.name=Brass Hoe
 item.esteemedinnovation:brass_sword.name=Brass Sword
 
 item.esteemedinnovation:steam_drill.name=Steam Drill
-item.esteemedinnovation:steam_axe.name=Steam Saw
+item.esteemedinnovation:steam_saw.name=Steam Saw
 item.esteemedinnovation:steam_shovel.name=Steam Shovel
 
 item.esteemedinnovation:the_void.name=The Void
