:gem: New Plonker machine. It is basically a block placer. It has two mods: Auto, and Redstone. Auto mode will automatically place blocks. Redstone mode will place blocks when it receives a redstone pulse. ItemBlocks can be fed into the plonker with a hopper or other things; they cannot be taken out without placing them. Though fortunately I have made it so the inventory can only receive blocks, so people shouldnt have any terrible losses of items.

--- a/src/main/resources/assets/esteemedinnovation/lang/en_US.lang
+++ b/src/main/resources/assets/esteemedinnovation/lang/en_US.lang
@@ -682,6 +682,7 @@ tile.esteemedinnovation:vacuum.name=Vacuum
 tile.esteemedinnovation:steam_whistle.name=Steam Whistle
 tile.esteemedinnovation:pressure_converter.name=Pressure Converter
 tile.esteemedinnovation:funnel.name=Funnel
+tile.esteemedinnovation:plonker.name=Plonker
 
 esteemedinnovation.research.shiftforlist=Hold shift to view your keywords
 item.esteemedinnovation:soil_sampling_kit.name=Soil Sampling Kit
@@ -693,5 +694,8 @@ esteemedinnovation.kitbag.shiftforlist=Hold shit to view contents
 item.esteemedinnovation:pipe_mold.name=Pipe Mold
 tile.esteemedinnovation:brass_pipe.name=Brass Pipe
 tile.esteemedinnovation:copper_pipe.name=Copper Pipe
+
+esteemedinnovation.plonker.always=Automatically place
+esteemedinnovation.plonker.pulse=Pulse to place
 
 entity.Villager.steam_engineer=Steam Engineer
